@@ -21,7 +21,7 @@ gchar *s = N_("Windows");
 gchar *s = N_("Registers");
 gchar *s = N_("Breakpoints");
 gchar *s = N_("Memory");
-gchar *s = N_("PC log");
+gchar *s = N_("PC trace");
 gchar *s = N_("Stack frame");
 gchar *s = N_("Heap (handles)");
 gchar *s = N_("I/O ports");
